@@ -1,3 +1,7 @@
+2015-06-06  Charlie Zender  <zender@uci.edu>
+
+	* Update time-stamps of date_written, time_written during regridding
+
 2015-06-04  Charlie Zender  <zender@uci.edu>
 
 	* NCO 4.5.0-beta8 release procedure:
